@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.12 2002-06-24 03:25:33 mschimek Exp $
+dnl $Id: configure.in,v 1.13 2002-07-16 00:08:59 mschimek Exp $
 
 AC_INIT(configure.in)
 AM_INIT_AUTOMAKE(zvbi, 0.2.1)
@@ -16,11 +16,6 @@ test -e site_def.h || cat <<EOF >site_def.h
 #define SITE_DEF_H
 #endif /* SITE_DEF_H */
 EOF
-
-dnl
-dnl Check whether program_invocation_name exists, GNU extension.
-dnl
-AC_CHECK_FUNCS(program_invocation_name)
 
 dnl
 dnl Check for unicode library or libc 2.1.
@@ -54,10 +49,16 @@ AC_EGREP_CPP([Lucky GNU user],[
 ])
 
 dnl
-dnl Check for iconv library if not included in libc.
+dnl Check for iconv() in libc or libiconv.
 dnl (Unicode conversions)
 dnl
-AC_SEARCH_LIBS(iconv_open, iconv)
+dnl Using m4/AM_ICONV_LINK from the gettext package.
+dnl
+AM_ICONV_LINK
+if test "$am_cv_func_iconv" != yes; then
+  AC_MSG_ERROR([iconv() not found])
+fi
+LIBS="$LIBS $LIBICONV"
 
 dnl
 dnl Check for png library.
@@ -72,12 +73,19 @@ fi
 AC_SUBST(PNG_LIB)
 
 dnl
+dnl X libraries.
+dnl (Test programs)
+dnl
+AC_PATH_XTRA
+test "x$no_x" = "xyes" || X_LIBS="$X_LIBS -lX11"
+
+dnl
 dnl Enable OS dependent device interfaces.
 dnl (Linux videodev.h, videodev2.h dependencies)
 dnl
 AC_MSG_CHECKING(whether to build the Video4Linux interface)
 AC_ARG_ENABLE(v4l,
-  AC_HELP_STRING([--enable-v4l], [Include the V4L and V4L2 interface]),
+  AC_HELP_STRING([--enable-v4l], [Include the V4L and V4L2 interface (auto)]),
   enable_vl4="$enableval", enable_v4l="auto")
 
 if test "x$enable_v4l" = "xauto"; then
@@ -95,28 +103,23 @@ if test "x$enable_v4l" = "xyes"; then
 fi
 
 dnl
-dnl X libraries.
-dnl (Test windows)
-dnl
-AC_PATH_XTRA
-
-dnl
 dnl Native language support.
 dnl
 AM_GNU_GETTEXT([external], [need-ngettext])
 
-dnl
-dnl Check for gtk-doc.
-dnl
-GTK_DOC_CHECK
+dnl 
+dnl Build docs from the sources if Doxygen is installed.
+dnl 
+AC_CHECK_PROG(HAVE_DOXYGEN, doxygen, yes, no)
+AM_CONDITIONAL(HAVE_DOXYGEN, [test "$HAVE_DOXYGEN" = yes])
 
 AC_OUTPUT([
   Makefile
-  m4/Makefile
   po/Makefile.in
   src/Makefile
   test/Makefile
   doc/Makefile
+  doc/Doxyfile
   contrib/Makefile
   zvbi.spec
 ])
